--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: The Mysteries of Modern London
 url: http://www.gutenberg.org/ebooks/49701
